--- a/style.css
+++ b/style.css
@@ -1,49 +1,28 @@
-* {
-    margin: 0;
-    padding: 0;
+h1{
+  color: white; font-size 12px ;
+  width: 50%;
+  height: 10px;
 }
 
-
-
-
-
-.banner{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 200px;
-  
-   
+.container {
+display: flex;
+background-color: #000000;
+width: 100%;
+height: 100px;
+padding: 10px;
+margin-top: 0px;
 
 }
 
-  
-  . {
-    position: absolute;
-    top: 29px;
-    left: 381px;
-    width: 303px  
+body{
+background-color: #EDE7EE;
+}
 
-  }
-  .imagem-lado{
-    position: absolute;
-    top: 110px;
-    right: 325px;
-    width: 390px;
-    height: 390px;
-
-  }
-  
-  .imagem_do_produto{
-    background-color: white;
-    width: 250px;
-    height: 350px;
-    left: 500px;    
-    padding-left: 10px;
-    margin: 100px;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-
-  }
-  
+footer{
+ display: flex;
+ background-color: #BAB7EA;
+ width: 100%;
+ height: 120px;
+ left: 100px;
+ padding: 0px;
+}
